added second collection and validated that updates work too.
