# routes/index.js
@@ -2,7 +2,11 @@ const router = require('express').Router();
 
 router.use('/', require('./swagger'))
 router.use('/tasklist', require('./tasklist'));
-router.get('/', (req, res) => { res.send('Yes, this API is working.');});
+router.use('/users', require('./users'))
+router.get('/', (req, res) => {
+    //#swagger.tags=["Landing Page"] 
+    res.send('Yes, this API is working.');
+});
 
 
 
